--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "nodemon": "^1.11.0"
+    "knex": "^0.12.6",
+    "nodemon": "^1.11.0",
+    "sqlite3": "^3.1.7"
   }
 }
