--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "watch": "watchify lib/init.js -o ./public/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,8 @@
     "express-handlebars": "^3.0.0",
     "knex": "^0.12.6",
     "nodemon": "^1.11.0",
-    "sqlite3": "^3.1.7"
+    "socket.io-client": "^1.5.1",
+    "sqlite3": "^3.1.7",
+    "watchify": "^3.7.0"
   }
 }
