--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^0.8.7",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.1",
     "knex": "^0.12.6",
     "nodemon": "^1.11.0",
     "socket.io-client": "^1.5.1",
